--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "trailingComma": "all"
   },
   "dependencies": {
-    "axios": "^0.21.0"
+    "axios": "^0.21.0",
+    "user-agent-array-ts": "^2.1.1"
   }
 }
