--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "husky": "^4.3.0",
     "prettier": "^2.1.2",
     "ts-node": "^9.1.1",
+    "typedoc": "^0.20.9",
     "typescript": "^4.1.3"
   },
   "lint-staged": {
