--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^14.14.14",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
+    "docusaurus-plugin-typedoc": "^0.7.0",
     "eslint": "^7.13.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-no-loops": "^0.3.0",
@@ -20,7 +21,8 @@
     "husky": "^4.3.0",
     "prettier": "^2.1.2",
     "ts-node": "^9.1.1",
-    "typedoc": "^0.20.9",
+    "typedoc": "^0.20.13",
+    "typedoc-plugin-markdown": "^3.4.0",
     "typescript": "^4.1.3"
   },
   "lint-staged": {
