--- a/website/package.json
+++ b/website/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "docusaurus-plugin-typedoc": "^0.7.0",
     "typedoc": "^0.20.13",
-    "typedoc-plugin-markdown": "^3.4.0"
+    "typedoc-plugin-markdown": "^3.4.0",
+    "typescript": "^4.1.3"
   }
 }
