--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -15,6 +15,17 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '12.x'
+
+      - name: Install root lib deps
+        run: |
+          if [ -e yarn.lock ]; then
+          yarn install --frozen-lockfile
+          elif [ -e package-lock.json ]; then
+          npm ci
+          else
+          npm i
+          fi
+
       - name: Test Build
         working-directory: website
         run: |
@@ -26,6 +37,7 @@ jobs:
           npm i
           fi
           npm run build
+
   gh-release:
     if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
@@ -37,7 +49,6 @@ jobs:
       - name: Add key to allow access to repository
         env:
           SSH_AUTH_SOCK: /tmp/ssh_agent.sock
-        working-directory: website
         run: |
           mkdir -p ~/.ssh
           ssh-keyscan github.com >> ~/.ssh/known_hosts
@@ -48,6 +59,17 @@ jobs:
           HostName github.com
           IdentityFile ~/.ssh/id_rsa
           EOT
+
+      - name: Install root lib deps
+        run: |
+          if [ -e yarn.lock ]; then
+          yarn install --frozen-lockfile
+          elif [ -e package-lock.json ]; then
+          npm ci
+          else
+          npm i
+          fi
+
       - name: Release to GitHub Pages
         working-directory: website
         env:
