--- a/package.json
+++ b/package.json
@@ -2,11 +2,25 @@
   "name": "fpl-ts",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
+  "files": [
+    "lib/"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "homepage": "https://roboflank.github.io/fpl-ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/roboflank/fpl-ts.git"
+  },
+  "keywords": [
+    "fpl",
+    "fpl-api",
+    "fantasy-football",
+    "epl-api"
+  ],
   "author": "",
   "license": "MIT",
   "devDependencies": {
