--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lib/"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc -p tsconfig.json",
+    "prepare": "npm run build"
   },
   "homepage": "https://roboflank.github.io/fpl-ts",
   "repository": {
