--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "fpl-ts",
   "version": "1.0.0",
-  "description": "",
+  "description": "A JS/TS wrapper for FPL API",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "files": [
-    "lib/"
+    "lib/",
+    "CHANGELOG.md",
+    "package.json",
+    "package-lock.json"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -26,6 +29,12 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/github": "^7.2.0",
+    "@semantic-release/npm": "^7.0.9",
+    "@semantic-release/release-notes-generator": "^9.0.1",
     "@types/node": "^14.14.14",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
@@ -35,6 +44,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.0",
     "prettier": "^2.1.2",
+    "semantic-release": "^17.3.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
