chore: fix main branch name

--- a/.github/workflows/test-release.yaml
+++ b/.github/workflows/test-release.yaml
@@ -1,10 +1,10 @@
 name: Test and release
 
-# Run the workflow when a Pull Request is opened or when changes are pushed to master
+# Run the workflow when a Pull Request is opened or when changes are pushed to main
 on:
  pull_request:
  push:
-  branches: [ master ]
+  branches: [ main ]
 
 jobs:
  test:
@@ -33,8 +33,8 @@ jobs:
   #  run: npm test
 
  release:
-  # Only release on push to master
-  if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+  # Only release on push to main
+  if: github.event_name == 'push' && github.ref == 'refs/heads/main'
   runs-on: ubuntu-latest
   # Waits for test jobs for each Node.js version to complete
   needs: [test]
