--- a/.github/workflows/test-release.yaml
+++ b/.github/workflows/test-release.yaml
@@ -9,28 +9,31 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        # Run the steps below with the following versions of Node.js
-        node-version: [8.x, 10.x, 12.x]
     steps:
       # Fetch the latest commit
       - name: Checkout
         uses: actions/checkout@v2
 
       # Setup Node.js using the appropriate version
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 12
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: '12.x'
 
       # Install package dependencies
-      - name: Install
-        run: npm ci
-
-    # Run tests
-    # - name: Test
-    #  run: npm test
+      - name: Install root lib deps
+        run: |
+          if [ -e yarn.lock ]; then
+          yarn install --frozen-lockfile
+          elif [ -e package-lock.json ]; then
+          npm ci
+          else
+          npm i
+          fi
+      # Run tests
+      # - name: Test
+      #  run: npm test
+      - name: Build
 
   release:
     # Only release on push to main
