--- a/.github/workflows/test-release.yaml
+++ b/.github/workflows/test-release.yaml
@@ -48,7 +48,7 @@ jobs:
 
   release:
     # Only release on push to main
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' || github.ref == 'refs/heads/next'
     runs-on: ubuntu-latest
     # Waits for test jobs for each Node.js version to complete
     needs: [test]
